--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c1b216857e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Knowledge Timeline</title>
+    <title>Kaja and Gaurav</title>
 </head>
 <body>
     <header id="main-header">
         <div class="container">
-            <h1><i class="fas fa-brain"></i>Knowledge Resume</h1>
+            <h1><!--<i class="fas fa-brain"></i>-->Gaurav <i class="fas fa-heart"></i> Kajal</h1>
             <h3><i class="fas fa-user"></i> Gaurav</h3>
         </div>
     </header>
@@ -18,67 +18,67 @@
         <ul>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2007: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2007: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2008: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2008: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2009: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2009: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2010: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2010: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2011: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2011: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2012: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2012: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2013: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2013: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2014: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2014: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2015: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2015: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2016: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2016: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2017: Html & Css</h3>
+                    <h3><i class="fas fa-chevron-right"></i>2017: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
                 </div>
             </li>
