--- a/index.html
+++ b/index.html
@@ -19,67 +19,67 @@
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2007: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2008: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2009: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2010: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2011: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2012: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2013: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2014: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2015: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2016: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
             <li>
                 <div>
                     <h3><i class="fas fa-chevron-right"></i>2017: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum repudiandae soluta ab vel aut autem sint deserunt culpa assumenda?</p>
+                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
                 </div>
             </li>
         </ul>
