--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c1b216857e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Kaja and Gaurav</title>
+    <title>Has to be named later</title>
 </head>
 <body>
     <header id="main-header">
         <div class="container">
-            <h1><!--<i class="fas fa-brain"></i>-->Gaurav <i class="fas fa-heart"></i> Kajal</h1>
+            <h1><i class="fas fa-brain"></i>Knowledge Timeline</h1>
             <h3><i class="fas fa-user"></i> Gaurav</h3>
         </div>
     </header>
@@ -18,68 +18,68 @@
         <ul>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2007: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2007: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2008: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2008: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2009: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2009: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2010: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2010: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2011: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2011: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2012: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2012: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2013: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2013: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2014: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2014: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2015: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2015: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2016: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2016: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
             <li>
                 <div>
-                    <h3><i class="fas fa-chevron-right"></i>2017: Gaurav <i class="fas fa-heart"></i> Kajal</h3>
-                    <p> Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal Gaurav & Kajal</p>
+                    <h3><i class="fas fa-chevron-right"></i>2017: Jai Shree Ram</h3>
+                    <p>  JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam JaiShreeRam</p>
                 </div>
             </li>
         </ul>
